force-app/main/default/objects/Score__c.object
<CustomObject>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliation</label>
        <referenceTo>Affiliation__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Report</label>
        <referenceTo>ucinn_ascendv2__Contact_Report_Relation__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>TODAY() &gt; Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involvement</label>
        <referenceTo>ucinn_ascendv2__Involvement__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>ucinn_ascendv2__Society_Membership__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Description__c</fullName>
        <label>Points Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soft_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Soft Credit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ucinn_ascendv2__Hard_and_Soft_Credit__c.ucinn_ascendv2__Credit_Type__c</field>
                <operation>equals</operation>
                <value>Soft</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ucinn_ascendv2__Hard_and_Soft_Credit__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                    <isActive>false</isActive>
                    <label>Prospective</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteering</label>
        <referenceTo>Volunteer_Hours__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Point_Value__c</columns>
        <columns>Points_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Event__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Scores_Contact_Report</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Point_Value__c</columns>
        <columns>Points_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Volunteering__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Points_Description__c</field>
            <operation>contains</operation>
            <value>Contact Report</value>
        </filters>
        <label>Scores - Contact Report</label>
        <sharedTo>
            <roleAndSubordinatesInternal>External_Relations_Development_and_Alumni_ERDA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Scores_Volunteering</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Point_Value__c</columns>
        <columns>Points_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Volunteering__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Points_Description__c</field>
            <operation>contains</operation>
            <value>volunteer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Points_Description__c</field>
            <operation>equals</operation>
            <value>Volunteer High Touch in last 12 months</value>
        </filters>
        <label>Scores - Volunteering</label>
        <sharedTo>
            <roleAndSubordinatesInternal>External_Relations_Development_and_Alumni_ERDA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>